--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         </div>
         <div class="row justify-content-around fs-5 text-center">
           <div class="col-md-4">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum quae, provident porro nobis sit exercitationem nisi quaerat vitae blanditiis consectetur.</p>
+            <p>Hallo, Perkenalkan Saya Fikri Albar Al Ghifari asal dari Kota Bandung kelahiran 2003, jejak pendidikan saya diawali dari SD Priangan Bandung, lalu dilanjutkan SMPN 30 Bandung, dilanjutkan SMA Sumatra 40 Bandung, dan sekarang merupakan Mahasiswa Telkom University Bandung</p>
           </div>
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque hic quidem ad, molestias minus velit tempore excepturi. Eos iure id provident porro corporis, temporibus at?</p>
+            <p>Saya merupakan Mahasiswa Teknologi Informasi yang antusias dan bermotivasi tinggi dengan kemampuan kepemimpinan, inisiatif, dan mencari tantangan baru. Berpengalaman dalam berbagai organisasi internal maupun eksternal kampus.</p>
           </div>
         </div>
       </div>
@@ -96,30 +96,33 @@
         <div class="row">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/Projects/1.jpg" class="card-img-top" alt="projects 1" />
+              <img src="img/Projects/3.jpg" class="card-img-top" alt="projects 3" />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Fakta Menarik Persib di Putaran Pertama Liga 1 2022, Tak Terkalahkan
+                  </h5>
+                <p class="card-text">Persib Bandung menjadi tim yang produktif membobol gawang lawan di putaran pertama Liga 1 2022/2023.
+                  Tercatat saat ini Maung Bandung telah mencetakan 29 gol dari 16 laga yang dilaluinya di putaran pertama.
+                  </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/Projects/2.jpg" class="card-img-top" alt="projects 2" />
+              <img src="img/Projects/4.jpg" class="card-img-top" alt="projects 4" />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href=" " class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Rencana Luis Milla di Persib soal Transfer Windows Liga 1 2022-2023</h5>
+                <p class="card-text">"Saat ini, setelah tiga bulan, saya sangat senang dengan semua pemain yang ada. Namun, untuk kebutuhan tim, kami butuh tambahan pemain di posisi full back kiri," ucap Milla
+                </p>
+                <a href="https://www.instagram.com/kabarpersibbandung/" class="btn btn-primary">Klik</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/Projects/2.jpg" class="card-img-top" alt="projects 2" />
+              <img src="img/Projects/5.jpg" class="card-img-top" alt="projects 5" />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">Sejarah Persib Bandung</h5>
+                <p class="card-text">Sebelum lahir nama Persib, terlebih dahulu berdiri perserikatan sepakbola bernama BIVB (Bandoengsche Indonesische Voetbal Bond) pada sekitar tahun 1923 yang merupakan salah satu organisasi perjuangan kaum nasionalis pada masa itu yang diketuai oleh Syamsudin dan kemudian diteruskan oleh Raden Atot Soeriawinata yang merupakan anak dari pahlawan nasional Raden Dewi Sartika.</p>
               </div>
             </div>
           </div>
