--- a/index.html
+++ b/index.html
@@ -142,20 +142,28 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-md-8">
-          <form>
+          <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+            <strong>Terima Kasih!</strong> Pesan anda sudah diterima.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          <form name="fikri-contact-form">
             <div class="mb-3">
               <label for="Name" class="form-label">Nama Lengkap</label>
-              <input type="text" class="form-control" id="Name" aria-describedby="Name">
+              <input type="text" class="form-control" id="Name" aria-describedby="Name" name="nama">
             </div>
             <div class="mb-3">
               <label for="email" class="form-label">Email Address</label>
-              <input type="email" class="form-control" id="email" aria-describedby="email">
+              <input type="email" class="form-control" id="email" aria-describedby="email" name="email">
             </div>
             <div class="mb-3">
               <label for="pesan" class="form-label">Pesan</label>
-              <textarea class="form-control" id="Pesan" rows="3"></textarea>
+              <textarea class="form-control" id="Pesan" rows="3" name="pesan"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary mb-3">Kirim</button>
+            <button type="submit" class="btn btn-primary mb-3 btn-kirim">Kirim</button>
+            <button class="btn btn-primary btn-loading d-none" id="tombol" type="button" disabled>
+              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+              Loading...
+            </button>
           </form>
         </div>
       </div>
@@ -169,5 +177,32 @@
       <p>Created with <i class="bi bi-heart-fill"></i> by <a href="https://www.instagram.com/fikriialb/"class="text-dark fw-bold">Fikri Albar Al Ghifari</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbyxA6L-6mFQwWPL2ZpA-NS5GDgO3fOshkXHyVShsrnbccWLy65U-m6F_UUp8ABgmOM/exec'
+      const form = document.forms['fikri-contact-form']
+      const btnKirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector('.btn-loading');
+      const myAlert = document.querySelector('.my-alert');
+    
+      form.addEventListener('submit', e => {
+        e.preventDefault()
+        // ketika tombol submit diklik
+        // tampilkan tombol loading, hilangkan tombol kirim
+        btnLoading.classList.toggle('d-none');
+        btnKirim.classList.toggle('d-none');
+        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+          .then(response => {
+            // tampilkan tombol kirim, hilangkan tombol loading
+            btnLoading.classList.toggle('d-none');
+            btnKirim.classList.toggle('d-none');
+            // tampilkan alert
+            myAlert.classList.toggle('d-none');
+            // reset form
+            form.reset();
+            console.log('Success!', response)
+          })
+          .catch(error => console.error('Error!', error.message))
+      })
+    </script>
   </body>
 </html>
